<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="City" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp" android:id="@+id/main_fragment_city_itl">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/main_fragment_city_it"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_fragment_venue_itl" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            android:hint="Venue"
            app:layout_constraintTop_toBottomOf="@+id/main_fragment_city_itl">


        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/main_fragment_venue_it"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Search"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            app:cornerRadius="8dp"
            app:rippleColor="@color/colorPrimary"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_last_query"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Last Query"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            app:cornerRadius="8dp"
            app:rippleColor="@color/colorPrimary"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btn_search"/>
</androidx.constraintlayout.widget.ConstraintLayout>