<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/nav_graph_main" app:startDestination="@id/homeFragment">

    <fragment android:id="@+id/homeFragment" android:name="com.miguel.myapplication.ui.main.HomeFragment"
              android:label="HomeFragment">
        <action android:id="@+id/action_home_to_search" app:destination="@id/searchFragment"
                app:enterAnim="@anim/nav_default_enter_anim" app:exitAnim="@anim/nav_default_exit_anim"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim" app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        <action android:id="@+id/action_home_to_last_query" app:destination="@id/lastQueryFragment"
                app:enterAnim="@anim/nav_default_enter_anim" app:exitAnim="@anim/nav_default_exit_anim"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim" app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>
    <fragment android:id="@+id/searchFragment" android:name="com.miguel.myapplication.ui.main.SearchFragment"
              android:label="SearchFragment"/>
    <fragment android:id="@+id/lastQueryFragment" android:name="com.miguel.myapplication.ui.main.LastQueryFragment"
              android:label="LastQueryFragment"/>
</navigation>